# 05_graphics_editor

./: CMakeLists.txt  Document.h  Primitive.h  Redactor_MVC.h  main.cpp
.github/workflows/: release.yml
